tests/reference/run-array_06_cc-e5490ba.stderr
semantic error: Rank mismatch in array reference: the array `str` has rank `1, but is referenced as rank `2
 --> tests/errors/array_06_cc.f90:5:5
  |
5 |     str(1, 2)(:) = '1234'
  |     ^^^^^^^^^^^^ 

semantic error: Rank mismatch in array reference: the array `str` has rank `1, but is referenced as rank `3
 --> tests/errors/array_06_cc.f90:6:5
  |
6 |     str(1,2,3)(:) = '1234'
  |     ^^^^^^^^^^^^^ 
